# pip-lock

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pip_lock.py  pyproject.toml  requirements.in  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test_pip_lock.py  tox.ini
pip_lock/: __init__.py
requirements/: py310.txt  py311.txt  py312.txt  py35.txt  py36.txt  py37.txt  py38.txt  py39.txt  requirements.in
src/: pip_lock.py
src/pip_lock/: __init__.py
tests/: test_pip_lock.py  test_requirements.txt
tests/requirements/: py310.txt  py311.txt  py312.txt  py313.txt  py38.txt  py39.txt
