[metadata]
name = pip-lock
version = 2.1.0
description = Check for differences between requirements.txt files and your environment.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Aaron Kirkbride, Adam Johnson, et al.
author_email = me@adamj.eu
url = https://github.com/adamchainz/pip-lock
project_urls =
    Changelog = https://github.com/adamchainz/pip-lock/blob/master/HISTORY.rst
license = ISCL
keywords = pip, requirements
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python
    Topic :: Utilities
license_file = LICENSE

[options]
package_dir=
    =src
py_modules = pip_lock
include_package_data = True
install_requires =
    pip>=10.0.0
python_requires = >=3.5
zip_safe = False

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203,E501,W503

[isort]
include_trailing_comma = True
force_grid_wrap = 0
line_length = 88
known_first_party = pip_lock
multi_line_output = 3
use_parentheses = True

[tool:multilint]
paths =
    setup.py
    src
    tests
