[metadata]
name = pip-lock
version = 2.7.0
description = Check for differences between requirements.txt files and your environment.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Aaron Kirkbride, Adam Johnson, et al.
author_email = me@adamj.eu
url = https://github.com/adamchainz/pip-lock
project_urls =
    Changelog = https://github.com/adamchainz/pip-lock/blob/main/HISTORY.rst
    Twitter = https://twitter.com/adamchainz
license = MIT
keywords = pip, requirements
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python
    Topic :: Utilities
license_file = LICENSE

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    importlib-metadata ; python_version < "3.8"
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203
