[metadata]
name = pip_lock
version = 2.10.0
description = Check for differences between requirements.txt files and your environment.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/adamchainz/pip-lock
author = Aaron Kirkbride, Adam Johnson, et al.
author_email = me@adamj.eu
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Utilities
    Typing :: Typed
keywords = pip, requirements
project_urls =
    Changelog = https://github.com/adamchainz/pip-lock/blob/main/CHANGELOG.rst
    Mastodon = https://fosstodon.org/@adamchainz
    Twitter = https://twitter.com/adamchainz

[options]
packages = find:
install_requires =
    importlib-metadata;python_version < "3.8"
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203
